@@ -1,4 +1,4 @@
-.loadIndices <- function(y, frag.chrs, restrict=NULL)
+.loadIndices <- function(y, frag.chrs=NULL, restrict=NULL)
 # A quick and dirty function for index loading with multiple libraries. This
 # produces a list which describes the necessary HDF5 object corresponding to
 # each chromosome combination for each library. 
@@ -6,46 +6,47 @@
 	y <- path.expand(y)
 	overall <- list()
 	ni<-length(y)
-	check.chrs <- !missing(frag.chrs)
-	if (!check.chrs) { warning("no protection against nonsensical chromosomes in the data") }
 	
 	# Checking how we want to do restriction.
 	do.restrict <- length(restrict)!=0L
 	paired <- attributes(restrict)$paired
-	if (is.null(paired)) { paired <- FALSE }
-	else if (paired) { nr <- length(restrict)/2L }
+	if (is.null(paired)) { 
+        paired <- FALSE 
+    } else if (paired) { 
+        nr <- length(restrict)/2L
+    }
 
 	for (ix in seq_len(ni)) {
 		all.data <- loadChromos(y[ix])
+
+        # Initial restriction on both entries being present in the list.
+        if (do.restrict) {
+            keep <- all.data$anchor1 %in% restrict & all.data$anchor2 %in% restrict
+            all.data <- all.data[keep,]
+        }
 		current <- split(all.data$anchor2, all.data$anchor1)
 
+        # Throwing an error if we see a chromosome not present in 'frag.chrs'.
+        if (!is.null(frag.chrs)) { 
+            leftovers <- setdiff(c(all.data$anchor1, all.data$anchor2), frag.chrs)
+            if (length(leftovers)) {
+                stop("'", leftovers[1], "' in '", y[ix], "' is not present in fragment chromosomes")
+            }
+        }
+
 		for (ac in names(current)) {
-			if (check.chrs && !ac %in% frag.chrs) { 
-				warning("'", ac, "' in data is not present in fragment chromosomes") 
-				next
-			}
 			subcurrent <- current[[ac]]
 
-			# Checking whether we should skip this anchor1; otherwise, taking only the relevant anchor2 for the inner iteration step.
-			if (do.restrict) {
-				amatch <- restrict==ac
-				if (!any(amatch)) { next }
-				if (paired) {
-					tmatch <- which(amatch)
-					tmatch <- tmatch + nr * (-1L)^(tmatch > nr) # Getting the chromosome in the other column.
-					subcurrent <- intersect(subcurrent, restrict[tmatch])
-				} else {
-					subcurrent <- intersect(subcurrent, restrict)
-				}
-				if (!length(subcurrent)) { next }
-			}
-			if (is.null(overall[[ac]])) { overall[[ac]]<-list() }
-				
+			# Paired restriction if necessary.
+			if (do.restrict && paired) {
+                tmatch <- which(restrict==ac)
+                tmatch <- tmatch + nr * (-1L)^(tmatch > nr) # Getting the chromosome in the other column.
+                subcurrent <- intersect(subcurrent, restrict[tmatch])
+                if (!length(subcurrent)) { next }
+            }
+			
+            if (is.null(overall[[ac]])) { overall[[ac]]<-list() }
 			for (tc in subcurrent) {
-				if (check.chrs && !tc %in% frag.chrs) { 
-					warning("'", tc, "' in data is not present in fragment chromosomes") 
-					next
-				}
 				if (is.null(overall[[ac]][[tc]])) { overall[[ac]][[tc]] <- logical(ni) }
 				overall[[ac]][[tc]][ix] <- TRUE
 			}
